# kbostadium

./: .gitignore  App.py  README.md  pyproject.toml
.github/workflows/: release.yml
src/kbostadium/: info_kbo.py  info_sta.py  test.ipynb
tests/: test_info_kbo.py  test_info_sta.py
