[project]
name = "kbostadium"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "<jiwon1118>", email = "<b23386585@gmail.com>"},
]
dependencies = ["typer>=0.15.1", "pytest>=8.3.4"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
