[project]
name = "kbostadium"
version = "0.4.0"
description = "Default template for PDM package"
authors = [
    {name = "jiwon1118", email = "b23386585@gmail.com"},
]
dependencies = ["typer>=0.15.1", "pytest>=8.3.4", "jupyterlab>=4.3.5", "pandas>=2.2.3", "requests>=2.32.3", "psycopg[binary,pool]>=3.2.4", "streamlit>=1.42.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
info-sta  = "kbostadium.info_sta:entry_point"

info-kbo  = "kbostadium.info_kbo:entry_point2"


[dependency-groups]
test = [
    "pytest>=8.3.4",
]
